# IdeaForge

./: .gitignore  README.md  main.py  pyproject.toml
src/ideaforge/: __init__.py  cli.py  planner.py
tests/: test_planner.py
