# Author: everettjf
[project]
name = "ideaforge"
version = "0.1.0"
description = "CLI idea-to-product planner powered by LangGraph"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-openai>=0.1.7",
    "langchain-core>=0.2.0",
    "typer>=0.9.0",
    "rich>=13.7.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.5"
]

[project.scripts]
ideaforge = "ideaforge.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true
index-url = "https://pypi.org/simple"
